feat(driver): arrived recipient command
